# strategy_management_fastapi

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: blank.yml
app/: config.py  dependencies.py  main.py  services.py
app/auth/: exeptions.py  models.py  router.py  schemas.py  services.py
app/strategy/: exeptions.py  models.py  router.py  schemas.py  services.py  utils.py
migration/: env.py
migration/versions/: 1e0934a35e38_initial_migration.py  423a56ae4b43_add_tables.py  7a01a2b2cf8d_add_tables.py
