[project]
name = "strategy-management-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Vanda"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.poetry]
packages = [{include = "app"}]